--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aniso8601==9.0.1
 attrs==22.1.0
 click==8.1.3
 Flask==2.2.2
-flask-restplus==0.13.0
+flask-restx==1.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.0
