--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ aniso8601==9.0.1
 attrs==22.2.0
 click==8.1.3
 Flask==2.2.3
+Flask-HTTPAuth==4.7.0
 flask-restx==1.1.0
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
