--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 aniso8601==9.0.1
 attrs==22.2.0
+blinker==1.7.0
 click==8.1.3
-Flask==2.2.3
-Flask-HTTPAuth==4.7.0
-flask-restx==1.1.0
+Flask==2.3.3
+Flask-HTTPAuth==4.8.0
+flask-restx==1.2.0
+importlib-resources==6.1.1
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -12,4 +14,5 @@ MarkupSafe==2.1.2
 pyrsistent==0.19.3
 pytz==2022.7.1
 pyuwsgi==2.0.21
-Werkzeug==2.2.3
+uWSGI==2.0.23
+Werkzeug==2.3.8
