Authenticate users against LDAP

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
       - 5000:5000
     volumes:
       - ./fo_services:/app/fo_services
-      - database:/app/instance/fo_services.sqlite
+      - instance:/app/instance/
     command: ["--app", "fo_services", "run", "--host", "0.0.0.0", "--debug"]
     entrypoint: ["/app/venv/bin/flask"]
 
 volumes:
-  database: {}
+  instance: {}
