--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,32 @@
 aniso8601==9.0.1
-attrs==22.2.0
+asgiref==3.7.2
+attrs==23.1.0
+Automat==22.10.0
 blinker==1.7.0
-click==8.1.3
+click==8.1.7
+constantly==23.10.4
 Flask==2.3.3
 Flask-HTTPAuth==4.8.0
 flask-restx==1.2.0
+hyperlink==21.0.0
+idna==3.4
 importlib-resources==6.1.1
+incremental==22.10.0
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
-MarkupSafe==2.1.2
-pyrsistent==0.19.3
-pytz==2022.7.1
-pyuwsgi==2.0.21
+jsonschema-specifications==2023.11.1
+ldap3==2.9.1
+MarkupSafe==2.1.3
+pyasn1==0.5.1
+pyrsistent==0.20.0
+pytz==2023.3.post1
+pyuwsgi==2.0.23
+referencing==0.31.0
+rpds-py==0.13.1
+six==1.16.0
+typing_extensions==4.8.0
 uWSGI==2.0.23
 Werkzeug==2.3.8
+zope.interface==6.1
