--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Automat==22.10.0
 blinker==1.7.0
 click==8.1.7
 constantly==23.10.4
+coverage==7.3.2
 Flask==2.3.3
 Flask-HTTPAuth==4.8.0
 flask-restx==1.2.0
@@ -12,6 +13,7 @@ hyperlink==21.0.0
 idna==3.4
 importlib-resources==6.1.1
 incremental==22.10.0
+iniconfig==2.0.0
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -19,8 +21,11 @@ jsonschema==4.17.3
 jsonschema-specifications==2023.11.1
 ldap3==2.9.1
 MarkupSafe==2.1.3
+packaging==23.2
+pluggy==1.3.0
 pyasn1==0.5.1
 pyrsistent==0.20.0
+pytest==7.4.3
 pytz==2023.3.post1
 pyuwsgi==2.0.23
 referencing==0.31.0
