--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ flask-restx = "^1.2.0"
 Flask-HTTPAuth = "^4.8.0"
 pytest = "^7.4.3"
 coverage = "^7.3.2"
+flask-login = "^0.6.3"
+flask-sqlalchemy = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
