--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ constantly==23.10.4
 coverage==7.3.2
 Flask==2.3.3
 Flask-HTTPAuth==4.8.0
+Flask-Login==0.6.3
 flask-restx==1.2.0
+Flask-SQLAlchemy==3.1.1
 hyperlink==21.0.0
 idna==3.4
 importlib-resources==6.1.1
@@ -23,6 +25,7 @@ ldap3==2.9.1
 MarkupSafe==2.1.3
 packaging==23.2
 pluggy==1.3.0
+psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pyrsistent==0.20.0
 pytest==7.4.3
