--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,7 @@ torch==2.2.1
 numpy==1.26.4
 pandas==2.2.0
 scipy==1.12.0
+scikit-learn==1.2.2
+scikit-metrics==0.1.0
+matplotlib==3.8.3
+joblib==1.3.2
