--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,15 @@ coverage = "^7.3.2"
 flask-login = "^0.6.3"
 flask-sqlalchemy = "^3.1.1"
 
+[tool.pyright]
+venvPath = "/home/ob/000JD/302 DMWG/30-39 Code/302.32__fo_services"
+venv = ".venv"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest-mock = "^3.12.0"
 
+black = "^24.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
