refactor: move all Python source into `./src`
BREAKING CHANGE: `pip install -r requirements.txt` is no longer
supported. Please consult the README for how to install dependencies
with poetry.

In order to use poetry effectively, we need to encapsulate our sources
into their own subtree, as poetry attempts to install the entire project
in the container.

This patch also contains fixes for the "empty user-ID" case which were
not split off into their own patchset.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,12 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - ./fo_services:/app/fo_services
-      - ./data:/data
-      - instance:/app/instance/
+      - ./src:/app/src/
+      - ./data:/app/data/
     command: ["--app", "fo_services", "run", "--host", "0.0.0.0", "--debug"]
     entrypoint: ["/app/venv/bin/flask"]
+    environment:
+        MPLCONFIGDIR: "/app/mplconfig"
     networks:
       - backbone
     depends_on:
