--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,21 @@ Flask = "<3.0.0"
 ldap3 = "^2.9.1"
 flask-restx = "^1.2.0"
 Flask-HTTPAuth = "^4.8.0"
-pytest = "^7.4.3"
-coverage = "^7.3.2"
 flask-login = "^0.6.3"
 flask-sqlalchemy = "^3.1.1"
 
+pandas = "^2.2.2"
+uwsgi = "^2.0.25.1"
+joblib = "^1.4.2"
+psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
+matplotlib = "^3.9.0"
 [tool.pyright]
 venvPath = "/home/ob/000JD/302 DMWG/30-39 Code/302.32__fo_services"
 venv = ".venv"
 
 [tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+coverage = "^7.3.2"
 pytest-mock = "^3.12.0"
 black = "^24.4.2"
 isort = "^5.13.2"
