--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "matplotlib",
     "requests>=2.32.3",
     "psycopg[binary,pool]>=3.2.1",
+    "click>=8.1.7",
+    "wasabi>=1.1.3",
 ]
 
 [build-system]
